--- a/blocks/template/footer/footer.css
+++ b/blocks/template/footer/footer.css
@@ -14,6 +14,11 @@
 		grid-template-columns: 1fr;
 		gap: var(--spacing-50);
 		color: white;
+		padding-inline: var(--spacing-40);
+
+		@media (width >=40rem) {
+			padding-inline: 0;
+		}
 	}
 
 	.footer-top {
